# EPFL-Reinforcement-Learning

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
notebook1/: Assignment.ipynb
notebook1/src/: plot.py
notebook2_2026/: Assignment.ipynb
notebook3/: Assignment.ipynb
notebook3/src/.ipynb_checkpoints/: PPO gridworld-checkpoint.ipynb
project_andreas/: CLAUDE.md  final_runs.py  main.py  play.py  plot.py  project-description.md  sac.py  sweep.py  train.py
